--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lodash": "^4.17.21",
     "method-override": "^3.0.0",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
     "qs": "^6.12.0",
     "sqlite3": "^5.1.7"
   }
